--- a/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.emf.scala.gencode.mavenplugin</artifactId>
-    <version>1.0.1</version>
+    <version>1.0.2-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
 
     <name>Kevoree :: Modeling :: EMF-Scala :: GenCode :: MavenPlugin</name>
@@ -14,7 +14,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.0.1</version>
+        <version>1.0.2-SNAPSHOT</version>
         <relativePath>../org.kevoree.modeling.root/pom.xml</relativePath>
     </parent>
 
