--- a/org.kevoree.modeling.emf.sample.kevoree/pom.xml
+++ b/org.kevoree.modeling.emf.sample.kevoree/pom.xml
@@ -32,7 +32,7 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                            <rootPackage>org</rootPackage>
+                            <packagePrefix>org</packagePrefix>
                         </configuration>
                     </execution>
                 </executions>
