--- a/org.kevoree.modeling.emf.sample.kermeta/pom.xml
+++ b/org.kevoree.modeling.emf.sample.kermeta/pom.xml
@@ -32,6 +32,7 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
+                            <rootXmiContainerClassName>ModelingUnit</rootXmiContainerClassName>
                         </configuration>
                     </execution>
                 </executions>
