--- a/org.kevoree.modeling.emf.sample.kermeta/pom.xml
+++ b/org.kevoree.modeling.emf.sample.kermeta/pom.xml
@@ -17,6 +17,14 @@
         <metamodel.ecore>metamodel/kermeta.ecore</metamodel.ecore>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.kevoree.extra</groupId>
+            <artifactId>org.kevoree.extra.emf.library</artifactId>
+            <version>2.7.0</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
