--- a/org.kevoree.modeling.emf.scala.gencode/pom.xml
+++ b/org.kevoree.modeling.emf.scala.gencode/pom.xml
@@ -17,12 +17,12 @@
     </parent>
 
     <dependencies>
-        <dependency>
+        <!--dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.8.2</version>
             <scope>test</scope>
-        </dependency>
+        </dependency-->
         <dependency>
             <groupId>org.kevoree.extra</groupId>
             <artifactId>org.kevoree.extra.emf.library</artifactId>
