--- a/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
@@ -6,7 +6,6 @@
 
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.emf.scala.gencode.mavenplugin</artifactId>
-    <version>1.2.3</version>
     <packaging>maven-plugin</packaging>
 
     <name>Kevoree :: Modeling :: EMF-Scala :: GenCode :: MavenPlugin</name>
@@ -14,7 +13,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.2.3</version>
+        <version>1.2.4-SNAPSHOT</version>
         <relativePath>../org.kevoree.modeling.root/pom.xml</relativePath>
     </parent>
 
@@ -27,7 +26,7 @@
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.emf.scala.gencode</artifactId>
-            <version>${kevoree.modeling.version}</version>
+            <version>${parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
