--- a/org.kevoree.modeling.emf.scala.gencode/pom.xml
+++ b/org.kevoree.modeling.emf.scala.gencode/pom.xml
@@ -6,13 +6,12 @@
 
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.emf.scala.gencode</artifactId>
-    <version>1.2.3</version>
     <name>Kevoree :: Modeling :: EMF-Scala :: GenCode</name>
 
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.2.3</version>
+        <version>1.2.4-SNAPSHOT</version>
         <relativePath>../org.kevoree.modeling.root/pom.xml</relativePath>
     </parent>
 
