--- a/org.kevoree.modeling.root/pom.xml
+++ b/org.kevoree.modeling.root/pom.xml
@@ -4,7 +4,7 @@
     <groupId>org.kevoree.modeling</groupId>
     <artifactId>org.kevoree.modeling.root</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.3</version>
+    <version>1.2.4-SNAPSHOT</version>
     <name>Kevoree :: Modeling :: Root</name>
     <url>https://github.com/dukeboard/kevoree-modeling-framework</url>
 
@@ -57,6 +57,10 @@
                 <version>1.9.0</version>
                 <configuration>
                     <basedir>${basedir}</basedir>
+                    <excludes>
+                        <exclude>target/**</exclude>
+                        <exclude>.idea/**</exclude>
+                    </excludes>
                     <header>${basedir}/../LICENSE_HEADER</header>
                     <strictCheck>true</strictCheck>
                     <properties>
