Update types mapping.

--- a/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.kevoree.modeling</groupId>
             <artifactId>org.kevoree.modeling.emf.scala.gencode</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
