--- a/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
+++ b/org.kevoree.modeling.emf.scala.gencode.mavenplugin/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
-        <version>1.2.5</version>
+        <version>1.2.6-SNAPSHOT</version>
         <relativePath>../org.kevoree.modeling.root/pom.xml</relativePath>
     </parent>
 
