--- a/org.kevoree.modeling.emf.scala.gencode/pom.xml
+++ b/org.kevoree.modeling.emf.scala.gencode/pom.xml
@@ -27,6 +27,14 @@
             <artifactId>org.kevoree.extra.emf.library</artifactId>
             <version>2.7.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.scalariform</groupId>
+            <artifactId>scalariform_2.9.2</artifactId>
+            <version>0.1.3</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
