--- a/org.kevoree.modeling.emf.sample.opposite/pom.xml
+++ b/org.kevoree.modeling.emf.sample.opposite/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.emf.sample.kermeta</artifactId>
+    <artifactId>org.kevoree.modeling.emf.sample.opposite</artifactId>
     <packaging>jar</packaging>
     <name>Kevoree :: Modeling :: EMF-Scala :: Sample :: Opposite</name>
 
@@ -37,9 +37,44 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.scala-tools</groupId>
+                <artifactId>maven-scala-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>main-scalac</id>
+                        <goals><goal>compile</goal></goals>
+                    </execution>
+                    <execution>
+                        <id>test-scalac</id>
+                        <goals><goal>testCompile</goal></goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.5.2</version>
+                <configuration>
+                    <formats>
+                        <format>html</format>
+                        <format>xml</format>
+                    </formats>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.12.4</version>
+            </plugin>
         </plugins>
     </build>
 
+    <reporting>
+        <plugins>
 
+        </plugins>
+    </reporting>
 
 </project>
