--- a/org.kevoree.modeling.emf.kotlin.gencode/kotload/pom.xml
+++ b/org.kevoree.modeling.emf.kotlin.gencode/kotload/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
