--- a/org.kevoree.modeling.emf.kotlin.gencode/pom.xml
+++ b/org.kevoree.modeling.emf.kotlin.gencode/pom.xml
@@ -56,6 +56,17 @@
                     </execution>
                 </executions>
             </plugin>
+
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
+                <configuration>
+                </configuration>
+            </plugin>
+
+
         </plugins>
     </build>
 
