--- a/org.kevoree.modeling.microBenchMark/pom.xml
+++ b/org.kevoree.modeling.microBenchMark/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.emf.sample.kermeta</artifactId>
+    <artifactId>org.kevoree.modeling.microbenchmark</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: EMF-Scala :: Sample :: Kermeta</name>
+    <name>Kevoree :: Modeling :: MicroBenchMark</name>
 
     <version>1.3.0-SNAPSHOT</version>
     <parent>
@@ -21,7 +21,7 @@
         <plugins>
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
-                <artifactId>org.kevoree.modeling.emf.kotlin.gencode.mavenplugin</artifactId>
+                <artifactId>org.kevoree.modeling.emf.scala.gencode.mavenplugin</artifactId>
                 <version>${project.version}</version>
                 <extensions>true</extensions>
                 <executions>
@@ -32,7 +32,7 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                            <rootXmiContainerClassName>Metamodel</rootXmiContainerClassName>
+                            <rootXmiContainerClassName>ModelingUnit</rootXmiContainerClassName>
                         </configuration>
                     </execution>
                 </executions>
