--- a/org.kevoree.modeling.emf.sample.thingml/pom.xml
+++ b/org.kevoree.modeling.emf.sample.thingml/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.emf.sample.kermeta</artifactId>
+    <artifactId>org.kevoree.modeling.emf.sample.thingml</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: EMF-Scala :: Sample :: Kermeta</name>
+    <name>Kevoree :: Modeling :: EMF-Scala :: Sample :: ThingML</name>
 
     <version>1.3.0-SNAPSHOT</version>
     <parent>
@@ -14,7 +14,7 @@
     </parent>
 
     <properties>
-        <metamodel.ecore>metamodel/kermeta.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/thingml.ecore</metamodel.ecore>
     </properties>
 
     <dependencies>
@@ -40,7 +40,7 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                            <rootXmiContainerClassName>Metamodel</rootXmiContainerClassName>
+                           <rootXmiContainerClassName>ThingMLModel</rootXmiContainerClassName>
                         </configuration>
                     </execution>
                 </executions>
