--- a/org.kevoree.modeling.emf.sample.jamopp/pom.xml
+++ b/org.kevoree.modeling.emf.sample.jamopp/pom.xml
@@ -17,6 +17,14 @@
         <metamodel.ecore>metamodel/jamopp.ecore</metamodel.ecore>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
@@ -32,14 +40,13 @@
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
-                          <!--  <rootXmiContainerClassName>ModelingUnit</rootXmiContainerClassName>  -->
+                            <rootXmiContainerClassName>CompilationUnit</rootXmiContainerClassName>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
