--- a/org.kevoree.benchmarker/pom.xml
+++ b/org.kevoree.benchmarker/pom.xml
@@ -33,10 +33,53 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google.caliper</groupId>
-            <artifactId>caliper</artifactId>
-            <version>0.5-rc1</version>
-            <scope>test</scope>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>1.3.9</version>
+        </dependency> <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.1</version>
+    </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>1.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>14.0-rc2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-multibindings</artifactId>
+            <version>3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>3.6.7.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.java-allocation-instrumenter</groupId>
+            <artifactId>java-allocation-instrumenter</artifactId>
+            <version>2.0</version>
         </dependency>
     </dependencies>
 
@@ -56,10 +99,12 @@
                         <phase>process-sources</phase>
                         <configuration>
                             <metamodels>
-                                <metamModel>src/main/resources/kevoree/metamodel/kevoree.ecore</metamModel>
+                                <metamModel>src/main/resources/kevoree.ecore</metamModel>
+                                <metamModel>src/main/resources/thingml.ecore</metamModel>
                             </metamodels>
                             <rootContainers>
                                 <rootContainer>ContainerRoot</rootContainer>
+                                <rootContainer>ThingMLModel</rootContainer>
                             </rootContainers>
                         </configuration>
                     </execution>
