--- a/org.kevoree.benckmarker.mavenplugin/pom.xml
+++ b/org.kevoree.benckmarker.mavenplugin/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.kevoree.extra</groupId>
             <artifactId>org.kevoree.extra.emf.genmodel.mavenplugin</artifactId>
-            <version>2.7.1</version>
+            <version>2.7.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
