--- a/org.kevoree.benchmarker/pom.xml
+++ b/org.kevoree.benchmarker/pom.xml
@@ -7,6 +7,7 @@
     <groupId>org.kevoree.benckmarker</groupId>
     <artifactId>org.kevoree.benckmarker</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <kotlin.version>0.5.1</kotlin.version>
@@ -27,14 +28,32 @@
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.9</version>
+        </dependency>
+        <!--dependency>
+            <groupId>org.kevoree.extra</groupId>
+            <artifactId>org.kevoree.extra.caliper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.code.java-allocation-instrumenter</groupId>
+                    <artifactId>java-allocation-instrumenter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency-->
+        <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
             <version>1.3.9</version>
-        </dependency> <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>2.1</version>
-    </dependency>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.1</version>
+        </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-client</artifactId>
@@ -66,14 +85,15 @@
             <version>2.2.2</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.9</version>
+            <groupId>org.kevoree.tools</groupId>
+            <artifactId>org.kevoree.tools.aether.framework.pack</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.google.code.java-allocation-instrumenter</groupId>
             <artifactId>java-allocation-instrumenter</artifactId>
             <version>2.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
