--- a/org.kevoree.modeling.emf.sample.fsm.legacy/pom.xml
+++ b/org.kevoree.modeling.emf.sample.fsm.legacy/pom.xml
@@ -1,11 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.emf.sample.kevoree</artifactId>
+    <artifactId>org.kevoree.modeling.emf.sample.fsm</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: EMF-Scala :: Sample :: Kevoree</name>
+    <name>Kevoree :: Modeling :: EMF-Scala :: Sample :: Finite State Machine</name>
 
-    <version>1.2.6-SNAPSHOT</version>
     <parent>
         <artifactId>org.kevoree.modeling.root</artifactId>
         <groupId>org.kevoree.modeling</groupId>
@@ -14,8 +13,17 @@
     </parent>
 
     <properties>
-        <metamodel.ecore>metamodel/kevoree.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/fsm.ecore</metamodel.ecore>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>0.5.1</version>
+        </dependency>
+    </dependencies>
+
 
     <build>
         <plugins>
@@ -37,6 +45,15 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>-Xmx1024m</argLine>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
