--- a/samples/org.kevoree.modeling.sample.fsm.kt/pom.xml
+++ b/samples/org.kevoree.modeling.sample.fsm.kt/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.sample.fsm</artifactId>
+    <artifactId>org.kevoree.modeling.sample.fsm.kt</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: Scala :: Sample :: Finite State Machine</name>
+    <name>Kevoree :: Modeling :: Scala :: Sample :: Finite State Machine :: Kotlin</name>
 
     <parent>
         <artifactId>org.kevoree.modeling.sample.root</artifactId>
@@ -18,12 +18,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.mapdb</groupId>
+            <artifactId>mapdb</artifactId>
+            <version>0.9-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>0.5.1</version>
+            <version>0.5.162</version>
         </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
@@ -37,10 +41,12 @@
                         <id>ModelGen</id>
                         <goals>
                             <goal>generate</goal>
+                            <goal>generatePersistentLayer</goal>
                         </goals>
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
+                            <clearOutput>false</clearOutput>
                         </configuration>
                     </execution>
                 </executions>
