Update KMF persistency

--- a/samples/org.kevoree.modeling.sample.pkevoree/pom.xml
+++ b/samples/org.kevoree.modeling.sample.pkevoree/pom.xml
@@ -48,6 +48,7 @@
                             <clearOutput>false</clearOutput>
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
+                            <!--selector>true</selector-->
                         </configuration>
                     </execution>
                 </executions>
