--- a/org.kevoree.modeling.root/pom.xml
+++ b/org.kevoree.modeling.root/pom.xml
@@ -77,6 +77,7 @@
                     <excludes>
                         <exclude>target/**</exclude>
                         <exclude>.idea/**</exclude>
+                        <exclude>**/*.vm</exclude>
                     </excludes>
                     <header>${basedir}/../LICENSE_HEADER</header>
                     <strictCheck>true</strictCheck>
