--- a/samples/org.kevoree.modeling.sample.root/pom.xml
+++ b/samples/org.kevoree.modeling.sample.root/pom.xml
@@ -44,5 +44,12 @@
             </plugin>
         </plugins>
     </build>
+	
+    <repositories>
+        <repository>
+            <id>sonatype-snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
+    </repositories>
 
 </project>
