--- a/samples/org.kevoree.modeling.sample.kevoree/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.codehaus.jettison</groupId>
+            <artifactId>jettison</artifactId>
+            <version>1.3.3</version>
+        </dependency>
     </dependencies>
 
 </project>
