--- a/samples/org.kevoree.modeling.sample.cloudml/pom.xml
+++ b/samples/org.kevoree.modeling.sample.cloudml/pom.xml
@@ -1,21 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>org.kevoree.modeling.sample.kevoree</artifactId>
+    <artifactId>org.kevoree.modeling.sample.cloudml</artifactId>
     <packaging>jar</packaging>
-    <name>Kevoree :: Modeling :: Sample :: Kevoree</name>
-
-    <parent>
-        <artifactId>org.kevoree.modeling.sample.root</artifactId>
-        <groupId>org.kevoree.modeling</groupId>
-        <version>1.0.0</version>
-        <relativePath>../org.kevoree.modeling.sample.root/pom.xml</relativePath>
-    </parent>
+    <name>Kevoree :: Modeling :: Scala :: Sample :: CloudML</name>
+    <groupId>org.kevoree.modeling</groupId>
+    <version>1.3.0-SNAPSHOT</version>
 
     <properties>
-        <metamodel.ecore>metamodel/kevoree.ecore</metamodel.ecore>
+        <metamodel.ecore>metamodel/CloudML.ecore</metamodel.ecore>
         <kotlin.version>0.5.429</kotlin.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -33,6 +36,7 @@
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
+                            <rootXmiContainerClassName>DeploymentModel</rootXmiContainerClassName>
                             <json>true</json>
                         </configuration>
                     </execution>
@@ -59,20 +63,23 @@
                     </execution>
                 </executions>
             </plugin>
+
         </plugins>
     </build>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.jettison</groupId>
-            <artifactId>jettison</artifactId>
-            <version>1.3.3</version>
-        </dependency>
-    </dependencies>
+    <repositories>
+        <repository>
+            <id>jetbrains-all</id>
+            <url>http://repository.jetbrains.com/all</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>jetbrains-all</id>
+            <url>http://repository.jetbrains.com/all</url>
+        </pluginRepository>
+    </pluginRepositories>
+
 
 </project>
