--- a/samples/org.kevoree.modeling.GC4MDE/pom.xml
+++ b/samples/org.kevoree.modeling.GC4MDE/pom.xml
@@ -6,4 +6,12 @@
     <groupId>org.kevoree.modeling</groupId>
     <version>1.0.0</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.kevoree.modeling</groupId>
+            <artifactId>org.kevoree.modeling.sample.kermeta</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
