--- a/samples/org.kevoree.modeling.sample.kermeta/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kermeta/pom.xml
@@ -28,6 +28,7 @@
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
                             <rootXmiContainerClassName>Metamodel</rootXmiContainerClassName>
+                            <json>true</json>
                         </configuration>
                     </execution>
                 </executions>
@@ -60,6 +61,11 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
         </dependency>
     </dependencies>
 
