--- a/samples/org.kevoree.modeling.sample.kermeta/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kermeta/pom.xml
@@ -29,6 +29,7 @@
                             <ecore>${metamodel.ecore}</ecore>
                             <rootXmiContainerClassName>Metamodel</rootXmiContainerClassName>
                             <json>true</json>
+                            <selector>true</selector>
                         </configuration>
                     </execution>
                 </executions>
@@ -66,6 +67,11 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.2.2</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.inria.jfilter</groupId>
+            <artifactId>jfilter-library</artifactId>
+            <version>1.3</version>
         </dependency>
     </dependencies>
 
