add naive flyweight implementation generation Init GC4MDE experiment data

--- a/samples/org.kevoree.modeling.sample.kevoree/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree/pom.xml
@@ -35,6 +35,7 @@
                             <packagePrefix>org</packagePrefix>
                             <json>true</json>
                             <selector>true</selector>
+							<flyweightFactory>true</flyweightFactory>
                         </configuration>
                     </execution>
                 </executions>
