--- a/samples/org.kevoree.modeling.GC4MDE/pom.xml
+++ b/samples/org.kevoree.modeling.GC4MDE/pom.xml
@@ -12,6 +12,11 @@
             <artifactId>org.kevoree.modeling.sample.kermeta</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.kevoree.modeling</groupId>
+            <artifactId>org.kevoree.modeling.sample.kevoree</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
