--- a/samples/org.kevoree.modeling.sample.kermeta/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kermeta/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <metamodel.ecore>metamodel/kermeta.ecore</metamodel.ecore>
-        <kotlin.version>0.5.429</kotlin.version>
+        <kotlin.version>0.1-SNAPSHOT</kotlin.version>
     </properties>
 
     <build>
@@ -30,6 +30,7 @@
                             <rootXmiContainerClassName>Metamodel</rootXmiContainerClassName>
                             <json>true</json>
                             <selector>true</selector>
+							<flyweightFactory>true</flyweightFactory>
                         </configuration>
                     </execution>
                 </executions>
@@ -38,13 +39,6 @@
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-js-library</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
                 <executions>
                     <execution>
                         <id>compile</id>
@@ -85,24 +79,8 @@
             <url>http://maven.kevoree.org/snapshots</url>
         </repository>
         <repository>
-            <id>jetbrains-release</id>
-            <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </repository>
-        <repository>
             <id>jetbrains-snapshots</id>
             <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </repository>
     </repositories>
 	
@@ -118,22 +96,6 @@
         <pluginRepository>
             <id>jetbrains-release</id>
             <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-        <pluginRepository>
-            <id>jetbrains-snapshots</id>
-            <url>http://repository.jetbrains.com/all</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
         </pluginRepository>
     </pluginRepositories>
 
