improve JS compilation

--- a/samples/org.kevoree.modeling.sample.kevoree.js/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree.js/pom.xml
@@ -30,6 +30,7 @@
                             <packagePrefix>org</packagePrefix>
                              <modelOnly>true</modelOnly>
                             <js>true</js>
+                            <json>true</json>
                         </configuration>
                     </execution>
                 </executions>
