cleanup for OSS release

--- a/org.kevoree.modeling.root/pom.xml
+++ b/org.kevoree.modeling.root/pom.xml
@@ -18,9 +18,9 @@
     </licenses>
 
     <scm>
-        <connection>scm:git@github.com:dukeboard/kevoree-modeling-framework.git</connection>
-        <developerConnection>scm:git@github.com:dukeboard/kevoree-modeling-framework.git</developerConnection>
-        <url>git@github.com:dukeboard/kevoree-modeling-framework.git</url>
+        <connection>scm:git:git://github.com:dukeboard/kevoree-modeling-framework.git</connection>
+        <developerConnection>scm:git:git://github.com:dukeboard/kevoree-modeling-framework.git</developerConnection>
+        <url>scm:git:git://github.com:dukeboard/kevoree-modeling-framework.git</url>
     </scm>
 
     <parent>
@@ -82,11 +82,41 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
+                <artifactId>maven-source-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+			<plugin>
+			        <groupId>org.apache.maven.plugins</groupId>
+			        <artifactId>maven-gpg-plugin</artifactId>
+			        <executions>
+			          <execution>
+			            <id>sign-artifacts</id>
+			            <phase>verify</phase>
+			            <goals>
+			              <goal>sign</goal>
+			            </goals>
+			          </execution>
+			        </executions>
+			</plugin>
             <plugin>
                 <groupId>org.scala-tools</groupId>
                 <artifactId>maven-scala-plugin</artifactId>
