--- a/release.properties
+++ b/release.properties
@@ -1,9 +1,22 @@
 #release configuration
-#Tue Apr 30 21:35:52 CEST 2013
-preparationGoals=clean verify
-pushChanges=true
+#Tue Apr 30 21:37:47 CEST 2013
+project.dev.org.kevoree.modeling\:org.kevoree.modeling.root=1.3.0-SNAPSHOT
 scm.commentPrefix=[maven-release-plugin] 
+pushChanges=true
+project.scm.org.kevoree.modeling\:org.kevoree.modeling.kotlin.generator.empty=true
+project.rel.org.kevoree.modeling\:org.kevoree.modeling.root=1.3.0-BETA2
+scm.tag=1.3.0-BETA2
 remoteTagging=true
 exec.additionalArguments=-Psonatype-oss-release -P kevoree
-completedPhase=check-poms
+project.scm.org.kevoree.modeling\:org.kevoree.modeling.root.connection=scm\:git\:git\://github.com/dukeboard/kevoree-modeling-framework.git
 scm.url=scm\:git\:git\://github.com/dukeboard/kevoree-modeling-framework.git
+preparationGoals=clean verify
+project.scm.org.kevoree.modeling\:org.kevoree.modeling.root.developerConnection=scm\:git\:git\://github.com/dukeboard/kevoree-modeling-framework.git
+project.scm.org.kevoree.modeling\:org.kevoree.modeling.root.tag=HEAD
+project.dev.org.kevoree.modeling\:org.kevoree.modeling.kotlin.generator=1.3.0-SNAPSHOT
+project.dev.org.kevoree.modeling\:org.kevoree.modeling.kotlin.generator.mavenplugin=1.3.0-SNAPSHOT
+project.rel.org.kevoree.modeling\:org.kevoree.modeling.kotlin.generator=1.3.0-BETA2
+project.scm.org.kevoree.modeling\:org.kevoree.modeling.kotlin.generator.mavenplugin.empty=true
+project.rel.org.kevoree.modeling\:org.kevoree.modeling.kotlin.generator.mavenplugin=1.3.0-BETA2
+completedPhase=run-preparation-goals
+project.scm.org.kevoree.modeling\:org.kevoree.modeling.root.url=scm\:git\:git\://github.com/dukeboard/kevoree-modeling-framework.git
