cleanup new JSON loader

--- a/samples/org.kevoree.modeling.sample.kevoree.js/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree.js/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <metamodel.ecore>metamodel/kevoree.ecore</metamodel.ecore>
-        <kotlin.version>0.1-SNAPSHOT</kotlin.version>
+        <kotlin.version>0.5.429</kotlin.version>
     </properties>
 
     <build>
@@ -28,8 +28,7 @@
                         <configuration>
                             <ecore>${metamodel.ecore}</ecore>
                             <packagePrefix>org</packagePrefix>
-                             <modelOnly>true</modelOnly>
-                            <js>true</js>
+                       <!--     <js>true</js>  -->
                             <json>true</json>
                         </configuration>
                     </execution>
@@ -46,11 +45,21 @@
                         <version>${kotlin.version}</version>
                     </dependency>
                 </dependencies>
+                <!--
                 <executions>
                     <execution>
                         <id>js</id>
                         <goals>
                             <goal>js</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                -->
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <goals>
+                            <goal>compile</goal>
                         </goals>
                     </execution>
                 </executions>
