--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,9 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <javadocExecutable>${java.home}/../bin/javadoc</javadocExecutable>
+                </configuration>
             </plugin>
 			<!--
 			<plugin>
