--- a/samples/org.kevoree.modeling.sample.kevoree/pom.xml
+++ b/samples/org.kevoree.modeling.sample.kevoree/pom.xml
@@ -22,7 +22,7 @@
             <plugin>
                 <groupId>org.kevoree.modeling</groupId>
                 <artifactId>org.kevoree.modeling.kotlin.generator.mavenplugin</artifactId>
-                <version>1.3.0-BETA2</version>
+                <version>1.3.0-BETA4-SNAPSHOT</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -35,7 +35,6 @@
                             <packagePrefix>org</packagePrefix>
                             <json>true</json>
                             <selector>true</selector>
-							<flyweightFactory>true</flyweightFactory>
                         </configuration>
                     </execution>
                 </executions>
@@ -69,11 +68,6 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.2.2</version>
         </dependency>
         <dependency>
             <groupId>org.kevoree</groupId>
