--- a/sosym-evaluations/metamodel/pom.xml
+++ b/sosym-evaluations/metamodel/pom.xml
@@ -23,4 +23,18 @@
 		
 	</modules>
 
+    <repositories>
+        <repository>
+            <id>jetbrains-all</id>
+            <url>http://repository.jetbrains.com/all</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>jetbrains-all</id>
+            <url>http://repository.jetbrains.com/all</url>
+        </pluginRepository>
+    </pluginRepositories>
+
 </project>
