--- a/sosym-evaluations/metamodel/kermeta/org.kevoree.modeling.sample.kermeta.kt/pom.xml
+++ b/sosym-evaluations/metamodel/kermeta/org.kevoree.modeling.sample.kermeta.kt/pom.xml
@@ -19,6 +19,11 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.intellij</groupId>
+            <artifactId>annotations</artifactId>
+            <version>117.157</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -56,6 +61,7 @@
                 <executions>
                     <execution>
                         <id>compile</id>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
