new demo without socket.io

--- a/gpce2013-experiment/package.json
+++ b/gpce2013-experiment/package.json
@@ -5,9 +5,8 @@
   "author": "Duke",
   "description": "simple WS server",
   "dependencies" : {
+	"ws"   :  "*",
 	"fs"   :  "*",
-    "socket.io"   :  "*",
-	"express"   :  "*",
-	"socket.io-client" : "*"
+	"express"   :  "~3.0.0",
   }
 }
